--- a/frontend/src/pages/RecruitmentSurveyStagePages/SurveysSurveyView/VerticalButtonSlider.module.css
+++ b/frontend/src/pages/RecruitmentSurveyStagePages/SurveysSurveyView/VerticalButtonSlider.module.css
@@ -1,6 +1,8 @@
 .iconButtonContainer {
-  position: relative;
+  position: absolute;
   left: 50%;
+  bottom: 0;
   width: min-content;
-  transform: translate(-50%, -45%);
+  transform: translate(-50%, 52%);
+  z-index: 1;
 }
