--- a/frontend/src/pages/RecruitmentSurveyStagePages/SurveysSurveyView/VerticalButtonSlider.module.css
+++ b/frontend/src/pages/RecruitmentSurveyStagePages/SurveysSurveyView/VerticalButtonSlider.module.css
@@ -1,8 +1,7 @@
 .iconButtonContainer {
   position: absolute;
   left: 50%;
-  bottom: 0;
+  top: 0;
   width: min-content;
-  transform: translate(-50%, 52%);
-  z-index: 1;
+  transform: translate(-50%, -51%);
 }
